- Spawn everyone in the same area (tournaments) - You can now enter an tournament with any combat level